v6.0/eSignatures/recipient-object/tags.md
---
type: page
title: Tags
listed: true
slug: tags
description: 
index_title: Tags
hidden: 
keywords: 
tags: 
---

A tag is an array of objects used to place signature fields on a given document as shown below. There is a limit of 200 tags per recipient. A recipient can have 0 tags.

{% code %}
{% tab language="json" %}
{
"tags": [
                {
                    "page_number": 1,
                    "x": 0.1,
                    "y": 0.1,
                    "type": "signature",
                    "optional": false,
                    "file_name": "myfile.pdf"
                }
            ],

}
{% /tab %}
{% /code %}

To populate a tag, you will need to specify a page number, x and y co-ordinate, and a tag type.

{% table %}
| Parameter | Description | 
| ---- | ---- | 
| page_number | This marks the page number of the page to place a tag. \n\n\n\n- This must correspond to a page number on the file designated by the **file_name** provided for the tag.\n- If it does not match the envelope will not be created, and if subscribed an “upload_error” webhook will be sent. | 
| width | This is is only applied to “text_field” tags.\n\n\n\n- Its value must be greater than 0\n- It is ignored for “signature” and “checkbox_field” tag types\n- If the tag is a “text_field”**,** then the **width** + **x** must be less than 1. | 
| x | The 'X' co-ordinate of the tag field.\n\n\n- This is a decimal fraction of the page width. \n- Minimum value can be 0 and maximum of 0.949.\n- If the tag is a “text_field”**,** then the **width** + **x** must be less than 1. | 
| y | The 'Y' co-ordinate of the tag field, \n\n\n- This is a decimal fraction of the page height. \n- Minimum value can be 0 and maximum of 0.949. | 
| type | This should be set to either:\n\n\n\n- text_field - allows a recipient to enter free text, a width value must be specified alongside "text_field" to define the size of the field. Width is only applied to "text_field" and must be greater than 0.\n- signature - used to indicate a click to sign box.\n- checkbox_field- used to generate a check box for the user to select.\n- radio_field - set to generate a radio button for the user to select. Multiple "radio_field" tags can be grouped using "tag_group_name".\n- date_signed_field - if selected is auto generated by the Yoti Sign API to apply the date of when the signer submitted their signature to the document, in the position that a sender sets up during the sender flow. This is in UTC format and is not a manual input field. "optional" must be set to false if this field is configured.\n- attachment - When a signer clicks on an attachment tag, they are prompted to upload a PDF. Only PDF files are currently supported. Once the envelope is completed, any attachments a signer has submitted can be found in the completion pack, which can be accessed using the `GET envelopes/:id/completed-documents` endpoint. | 
| optional | A tag can be marked as "optional" by adding the "optional" parameter. \n\n\n\n- If a tag is marked as "optional" a recipient will be allowed to sign the document without submitting the tag. \n- If an "optional" tag is not submitted by a sender, the tag will not show up on the completed document.\n- `yoti_attributes` may not be marked as "optional". | 
| filename | The name of the document to be signed and must correspond to a filename of one of the files provided in the request (including the file extension). \n\n\n\n- The character limit is 255.\n- If it does not match, the envelope will not be created and if subscribed an “upload_error” webhook will be sent. | 
| tag_group_name | Used to group multiple tags of the same type. \n\n\n\n- Grouping radio fields by a tag group ensures only one radio field can be selected out of the group\n- Tag groups must each have a minimum of 2 tags in them.\n- Must not have both optional and required tags in the same tag group\n- Must contain at least one alphanumeric character for tag_group_name (can only contain letters, digits & spaces.\n- Must be 50 characters or less | 
| disable_resize | This property is only applicable to type text_field and prevents the field from expanding by locking it to a specific size. This is a boolean.\n\n\n\nIf not set, the signee can continue typing until the end of the document. | 
| prefilled_value | This is only applied to “text_field” tags. It is an optional property and must not contain any special characters. This will pre-fill the tag with the assigned string. | 
| readonly | This is only applied to “text_field” tags and it is an optional property. This is a boolean which if set to true prevents a pre-filled value from being changed by the signer. | 
{% /table %}